@@ -15,6 +15,7 @@ our @EXPORT = qw(
    backup_files
    cgi_bin
    cms_prefixes
+   document_extensions
    dot_files
    fake_extensions
    header_injection
@@ -154,6 +155,28 @@ sub cms_prefixes {
         PATH_INFO    => $re,
     );
 }
+
+=export document_extensions
+
+This blocks requests for file extensions associated with common document formats, e.g. Office documents or spreadsheets.
+
+This does not include audio, video or image files.
+
+If you provide downloads for specific files, then you may need to add exceptions for this rule based on the file type
+and path.
+
+Added in v0.9.2.
+
+=cut
+
+sub document_extensions {
+    my $re = qr{\.(?:a[bz]w|csv|docx?|e?pub|od[pst]|pdf|pptx?|one|rtf|vsd|xlsx?)\b};
+    return (
+        PATH_INFO    => $re,
+        QUERY_STRING => $re,
+    );
+}
+
 
 =export dot_files
 
