@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}:
 
 {{$NEXT}}
+  [Exhancements]
+  - Added document_extensions rule.
 
 v0.9.1    2023-01-10 10:55:57+00:00 Europe/London
   No changes since v0.9.0.
